--- a/index.html
+++ b/index.html
@@ -3,18 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>my.portfolio</title>
 </head>
-<body style="background-color: turquoise;">
+<body >
     <header>
-        <h1 style="color: brown;"><em>Hi Im Nejeh Chaabani</em></h1>
+        <h1>Hi Im Nejeh Chaabani</h1>        
         <nav>
- <ul>
-            <li><a href="#"><strong>home</strong></a></li>
-            <li><a href="#about"><strong>about</strong></a></li>
-            <li><a href="#project"><strong>project</strong></a></li>
-            <li><a href="#contact"><strong>contact</strong></a></li>
-        </ul>
+            <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#project">project</a></li>
+                <li><a href="#contact">contact</a></li>
+            </ul>
         </nav>
         
 
