--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <title>my.portfolio</title>
 </head>
-<body >
+<body>
     <header>
-        <h1>Hi Im Nejeh Chaabani</h1>        
-        <nav>
+        <h1 >Hi Im Nejeh Chaabani</h1>        
+        <nav class="navbar">
             <ul>
                 <li><a href="#">home</a></li>
                 <li><a href="#about">about</a></li>
@@ -33,7 +34,7 @@ The study of nature is a branch of science known as natural science. Scientists 
             </section>
             <section id="project">
                 <h2>project</h2>
-             <iframe width="560" height="315" src="https://www.youtube.com/embed/0CTp1a-aCUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+             <iframe class="video" width="700" height="500" src="https://www.youtube.com/embed/0CTp1a-aCUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </section>
           </main>
     <footer>
